--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+* {
+    padding: 0px 0px 0px 0px; /* top right bottom left*/
+    margin: 8px 0px 8px 0px;
+}
+
+h1 {
+    color: white;
+    font-size: 48px;
+}
+
 figure img{
     max-width:100%;
     height:auto
@@ -49,6 +59,7 @@ img {
     background-color: white;
     color: #333333;
     margin-top: 16px;
+    border: 3px solid #5a5a87;
 }
 
 .grid-container h3 {
